--- a/BLRF/NAMESPACE
+++ b/BLRF/NAMESPACE
@@ -3,10 +3,12 @@
 export(Confusion_one_tree)
 export(accuracy_mean_ci)
 export(implement_BLRF)
+export(implement_BLRF2)
 export(one_tree)
 export(one_tree_predict)
 export(parallel_implement_BLRF)
 export(prediction_tree)
+export(prediction_tree_regression)
 export(subsampling)
 export(tree_implement)
 export(weights)
