revised with split choice

--- a/BLRF/NAMESPACE
+++ b/BLRF/NAMESPACE
@@ -7,7 +7,7 @@ export(implement_BLRF2)
 export(one_tree)
 export(one_tree_predict)
 export(parallel_implement_BLRF)
-export(prediction_tree)
+export(prediction_tree_categorical)
 export(prediction_tree_regression)
 export(subsampling)
 export(tree_implement)
