--- a/BLRF/NAMESPACE
+++ b/BLRF/NAMESPACE
@@ -2,8 +2,9 @@
 
 export(Confusion_one_tree)
 export(accuracy_mean_ci)
-export(implement_BLRF)
+export(blrf)
 export(implement_BLRF2)
+export(implement_check_input)
 export(one_tree)
 export(one_tree_predict)
 export(parallel_implement_BLRF)
