add tree control, parallel does not work

--- a/BLRF/DESCRIPTION
+++ b/BLRF/DESCRIPTION
@@ -20,4 +20,7 @@ Imports:
     future
 RoxygenNote: 7.1.0
 Suggests: 
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
