multicore and multiprocess

--- a/BLRF/NAMESPACE
+++ b/BLRF/NAMESPACE
@@ -5,5 +5,7 @@ export(blrf)
 export(implement_BLRF)
 export(implement_BLRF2)
 export(parallel_implement_BLRF)
+export(predict_ci_classification)
+export(predict_ci_regression)
 export(prediction_tree_categorical)
 export(prediction_tree_regression)
